[gd_scene load_steps=2 format=3 uid="uid://d0c6yqj1v8w7c"]

[ext_resource type="Script" path="res://UI.gd" id="1_xqyf4"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_xqyf4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TopSpacer" type="Control" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TurnLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
text = "Turn: 0"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpinButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 0
text = "Spin"

[connection signal="pressed" from="MarginContainer/VBoxContainer/SpinButton" to="." method="_on_spin_button_pressed"]
